# clarity

./: README.md
.github/workflows/: main.yml
backend/: .gitignore  Cargo.toml  README.md  extractor.py  main.py  models.py  requirements.txt  summarizer.py  verifyer.py
backend/scrapper/: Cargo.toml  README.md
backend/scrapper/src/: handlers.rs  main.rs  models.rs
backend/src/: handlers.rs  main.rs  models.rs  scrapper.rs  summarizer.rs
backend/summarizer/: README.md  main.py  models.py  requirements.txt  summarizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html  CNAME  robots.txt  sitemap.xml
frontend/public/icon/: site.webmanifest
frontend/src/: Routes.tsx  main.tsx
frontend/src/components/common/: Footer.tsx  Header.tsx
frontend/src/pages/: Home.tsx
frontend/src/utils/: analytics.tsx  axios.tsx
