[package]
name = "clarity-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = "0.12" # For making HTTP requests
scraper = "0.21" # For HTML parsing
serde = { version = "1.0", features = [
    "derive",
] } # For serialization/deserialization
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
url = "2.5.4"
